--- a/personal_website.ipynb
+++ b/personal_website.ipynb
@@ -2,26 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import segno\n",
-    "\n",
-    "\n",
-    "qrcode = segno.make_qr(\"https://farhan-sadeek.netlify.app\").save('qrcode.png', scale = 10, border = 5, dark = 'darkblue')"
+    "qrcode = segno.make_qr(\"https://farhan-sadeek.netlify.app\").save('personal_website.png', scale = 10, border = 5, dark = 'darkblue')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Farhan\\AppData\\Local\\Temp\\ipykernel_6840\\2108374632.py:12: DeprecationWarning: textsize is deprecated and will be removed in Pillow 10 (2023-07-01). Use textbbox or textlength instead.\n",
+      "C:\\Users\\Farhan\\AppData\\Local\\Temp\\ipykernel_1912\\4035473607.py:12: DeprecationWarning: textsize is deprecated and will be removed in Pillow 10 (2023-07-01). Use textbbox or textlength instead.\n",
       "  text_width, text_height = draw.textsize(text, font)\n"
      ]
     }
@@ -30,12 +28,12 @@
     "from PIL import Image, ImageDraw, ImageFont\n",
     "\n",
     "# Open the generated QR code image\n",
-    "image = Image.open(\"qrcode.png\")\n",
+    "image = Image.open(\"personal_website.png\")\n",
     "draw = ImageDraw.Draw(image)\n",
     "\n",
     "# Define the text to be written\n",
     "text = \"Personal Website\"\n",
-    "font = ImageFont.truetype(\"arial.ttf\", 25)  # You may need to change the font and size\n",
+    "font = ImageFont.truetype(\"arial.ttf\", 35)  # You may need to change the font and size\n",
     "\n",
     "# Calculate the size of the text\n",
     "text_width, text_height = draw.textsize(text, font)\n",
@@ -58,7 +56,7 @@
     "draw.text(text_position, text, font=font, fill=\"black\")\n",
     "\n",
     "# Save the modified image\n",
-    "new_image.save(\"qrcode_with_text_and_border.png\")\n"
+    "new_image.save(\"personal_website.png\")\n"
    ]
   }
  ],
