--- a/personal_website.ipynb
+++ b/personal_website.ipynb
@@ -7,19 +7,19 @@
    "outputs": [],
    "source": [
     "import segno\n",
-    "qrcode = segno.make_qr(\"https://farhan-sadeek.netlify.app\").save('personal_website.png', scale = 10, border = 5, dark = 'darkblue')"
+    "qrcode = segno.make_qr(\"https://sadeekfarhan21.github.io/\").save('personal_website.png', scale = 10, border = 5, dark = 'darkblue')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Farhan\\AppData\\Local\\Temp\\ipykernel_1912\\4035473607.py:12: DeprecationWarning: textsize is deprecated and will be removed in Pillow 10 (2023-07-01). Use textbbox or textlength instead.\n",
+      "C:\\Users\\Farhan\\AppData\\Local\\Temp\\ipykernel_28456\\4035473607.py:12: DeprecationWarning: textsize is deprecated and will be removed in Pillow 10 (2023-07-01). Use textbbox or textlength instead.\n",
       "  text_width, text_height = draw.textsize(text, font)\n"
      ]
     }
